assets/css/app.css
/* See the Tailwind configuration guide for advanced usage
   https://tailwindcss.com/docs/configuration */
@font-face {
    font-family: "Nunito";
    font-style: normal;
    font-display: swap;
    font-weight: 200 1000;
    src: url(/fonts/nunito-latin-wght-normal.woff2) format("woff2-variations");
    unicode-range:
        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
        U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
        U+2212, U+2215, U+FEFF, U+FFFD;
}

@import "tailwindcss";
@source "../css";
@source "../js";
@source "../../lib/admin_web";

@plugin "@tailwindcss/typography";

/* A Tailwind plugin that makes "hero-#{ICON}" classes available.
   The heroicons installation itself is managed by your mix.exs */
@plugin "../vendor/heroicons";

/* daisyUI Tailwind Plugin. You can update this file by fetching the latest version with:
   curl -sLO https://github.com/saadeghi/daisyui/releases/latest/download/daisyui.js
   Make sure to look at the daisyUI changelog: https://daisyui.com/docs/changelog/ */
@plugin "../vendor/daisyui" {
    themes: false;
}

/* daisyUI theme plugin. You can update this file by fetching the latest version with:
  curl -sLO https://github.com/saadeghi/daisyui/releases/latest/download/daisyui-theme.js
  We ship with two themes, a light one inspired on Phoenix colors and a dark one inspired
  on Elixir colors. Build your own at: https://daisyui.com/theme-generator/ */
@plugin "../vendor/daisyui-theme" {
    name: "dark";
    default: false;
    prefersdark: true;
    color-scheme: "dark";
    --page-scroll-bg: oklch(25.26% 0.014 253.1);
    --color-base-100: oklch(30.33% 0.016 252.42);
    --color-base-200: oklch(25.26% 0.014 253.1);
    --color-base-300: oklch(20.15% 0.012 254.09);
    --color-base-content: oklch(97.807% 0.029 256.847);
    --color-primary: oklch(60.4% 0.242 284.4);
    --color-primary-content: oklch(96% 0.018 272.314);
    --color-secondary: oklch(40.1% 0.242 284.4);
    --color-secondary-content: oklch(96% 0.018 272.314);
    --color-accent: oklch(62.1% 0.241 354.308);
    --color-accent-content: oklch(96% 0.015 12.422);
    --color-neutral: oklch(0.48 0.03 257.66);
    --color-neutral-content: oklch(84% 0 0);
    --color-info: oklch(58% 0.158 241.966);
    --color-info-content: oklch(97% 0.013 236.62);
    --color-success: oklch(60% 0.118 184.704);
    --color-success-content: oklch(98% 0.014 180.72);
    --color-warning: oklch(66% 0.179 58.318);
    --color-warning-content: oklch(98% 0.022 95.277);
    --color-error: oklch(58% 0.253 17.585);
    --color-error-content: oklch(96% 0.015 12.422);
    --radius-selector: 0.25rem;
    --radius-field: 0.25rem;
    --radius-box: 0.5rem;
    --size-selector: 0.21875rem;
    --size-field: 0.21875rem;
    --border: 1.5px;
    --depth: 1;
    --noise: 0;
}

@plugin "../vendor/daisyui-theme" {
    name: "light";
    default: true;
    prefersdark: false;
    color-scheme: "light";
    --page-scroll-bg: #f2eff6;
    --color-base-100: #f9f7fd;
    --color-base-200: #f2eff6;
    --color-base-300: #c0c6ed;
    --color-base-content: oklch(21% 0.006 285.885);
    --color-primary: #485cc7;
    --color-primary-content: oklch(97% 0.014 343.198);
    --color-secondary: #b1b6eb;
    --color-secondary-content: oklch(43% 0.218 303.724);
    --color-accent: oklch(62.1% 0.241 354.308);
    --color-accent-content: oklch(96% 0.015 12.422);
    --color-neutral: oklch(0.5959 0.017 285.786);
    --color-neutral-content: oklch(98% 0 0);
    --color-info: oklch(62% 0.214 259.815);
    --color-info-content: oklch(97% 0.014 254.604);
    --color-success: oklch(70% 0.14 182.503);
    --color-success-content: oklch(98% 0.014 180.72);
    --color-warning: oklch(66% 0.179 58.318);
    --color-warning-content: oklch(98% 0.022 95.277);
    --color-error: oklch(58% 0.253 17.585);
    --color-error-content: oklch(96% 0.015 12.422);
    --radius-selector: 0.25rem;
    --radius-field: 0.25rem;
    --radius-box: 0.5rem;
    --size-selector: 0.21875rem;
    --size-field: 0.21875rem;
    --border: 1.5px;
    --depth: 1;
    --noise: 0;
}

/* Add variants based on LiveView classes */
@custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
@custom-variant phx-submit-loading (.phx-submit-loading&, .phx-submit-loading &);
@custom-variant phx-change-loading (.phx-change-loading&, .phx-change-loading &);

/* Use the data attribute for dark mode  */
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

/* Make LiveView wrapper divs transparent for layout */
[data-phx-session],
[data-phx-teleported-src] {
    display: contents;
}

/* This file is for your main application CSS */
@theme {
    --animate-wiggle: wiggle 2s ease-in-out infinite;
    @keyframes wiggle {
        0%,
        100% {
            transform: rotate(3deg);
        }
        50% {
            transform: rotate(-3deg);
        }
    }
}

@layer base {
    html {
        font-family: "Nunito", sans-serif;
    }
}

@utility bg-wave-primary {
    background-color: var(--color-primary);
    background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='currentColor' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
}

blockquote:has(h4.alert) {
    border-left: 4px solid var(--color-error);
}

.prose a {
    word-break: break-word;
}

blockquote:has(h4.warning, h4.info, h4.error) {
    @apply rounded-lg;
    font-style: normal;
    padding: 8px 16px 8px 16px;

    & p::before,
    p::after {
        content: "";
    }
}
blockquote:has(h4.warning) {
    @apply bg-warning/20;
    border-left: 4px solid var(--color-warning);
    & h4 {
        @apply text-warning;
        margin-top: 8px;
    }
    & h4::before {
        display: inline-block;
        @apply size-6 mr-2 align-bottom text-warning;
        background-color: currentColor;
        -webkit-mask: url("/icons/warning.svg") no-repeat center / contain;
        mask: url("/icons/warning.svg") no-repeat center / contain;
        content: "";
    }
}
blockquote:has(h4.info) {
    @apply bg-info/20;
    border-left: 4px solid var(--color-info);
    & h4 {
        @apply text-info;
        margin-top: 8px;
    }
    & h4::before {
        display: inline-block;
        @apply size-6 mr-2 align-bottom text-info;
        background-color: currentColor;
        -webkit-mask: url("/icons/info.svg") no-repeat center / contain;
        mask: url("/icons/info.svg") no-repeat center / contain;
        content: "";
    }
}
blockquote:has(h4.error) {
    @apply bg-error/20;
    border-left: 4px solid var(--color-error);
    & h4 {
        @apply text-error;
        margin-top: 8px;
    }
    & h4::before {
        display: inline-block;
        @apply size-6 mr-2 align-bottom text-error;
        background-color: currentColor;
        -webkit-mask: url("/icons/error.svg") no-repeat center / contain;
        mask: url("/icons/error.svg") no-repeat center / contain;
        content: "";
    }
}

